# archiver

./: .gitignore  pyproject.toml  scrapy.cfg  test.html
.github/workflows/: python-app.yml
archiver/: __main__.py  errors.py  items.py  middlewares.py  models.py  pipelines.py  settings.py  spider.py
archiver/loksabha/: spider.py
archiver/rajyasabha/: rajyasabha.py  spider.py
archiver/spiders/: base.py  loksabha.py  rajyasabha.py
