[tool.poetry]
name = "archiver"
version = "0.1.0"
description = "A scraping tool for CMHLP's Public Archive"
authors = ["Aman Phatak <phatakaman@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yarl = "^1.8.2"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
